incluiu um video

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>corinthains</title>
 </head>
 <body>
-    
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/8M8P2MKM2Cw?si=6tCrAw59umNk31QZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
