--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>Corinthians<
+    <title>Guiminamflix</title>
 </head>
 
 <body>
-    <header>Corinthians</header>
+    <header>GUIMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Corinthians o Maior</h1>
-            <p><div id="Corinthians"></div></p>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
@@ -28,9 +28,9 @@
     </section>
 
     <section class="categoria">
-        <h2>Timão</h2>
+        <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="<iframe width="560" height="315" src="https://www.youtube.com/embed/8M8P2MKM2Cw?si=GlNOwgRwaUEH0r-A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>">
+            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
